--- a/src/UI by Vedernykov/Views/Mobile/LeftMenuView.xaml
+++ b/src/UI by Vedernykov/Views/Mobile/LeftMenuView.xaml
@@ -53,7 +53,6 @@
         SelectionMode="Single"
         ItemsSource="{Binding MenuItems}"
         SelectedItem="{Binding SelectedMenuItem}"
-        SelectionChangedCommand="{Binding ChangeSelectedMenuItemCommand}"
         Margin="12, 6">
 
         <CollectionView.ItemTemplate>
@@ -62,7 +61,8 @@
                 <pk:PancakeView
                     Border="{DynamicResource TextAndBackgroundColor_i12}"
                     CornerRadius="5"
-                    Padding="10">
+                    Padding="10"
+                    xct:TouchEffect.Command="{Binding TapCommand}">
 
                     <VisualStateManager.VisualStateGroups>
                         <VisualStateGroupList>
