--- a/src/UI by Vedernykov/Views/Mobile/MainView.xaml
+++ b/src/UI by Vedernykov/Views/Mobile/MainView.xaml
@@ -2,6 +2,7 @@
 <StackLayout
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:behaviors="clr-namespace:UI_by_Vedernykov.Behaviors"
     Padding="25"
     BackgroundColor="{DynamicResource TextAndBackgroundColor_i14}"
     x:Class="UI_by_Vedernykov.Views.Mobile.MainView">
@@ -11,5 +12,51 @@
         TextColor="{DynamicResource TextAndBackgroundColor_i1}"
         VerticalOptions="CenterAndExpand"
         HorizontalOptions="Center"/>
+
+    <ScrollView
+        HeightRequest="45"
+        HorizontalOptions="FillAndExpand"
+        HorizontalScrollBarVisibility="Never"
+        IsEnabled="False"
+        Orientation="Horizontal"
+        x:Name="mainPage">
+        
+        <StackLayout
+            Padding="0"
+            BackgroundColor="Green"
+            Orientation="Horizontal"
+            Spacing="0">
+            
+            <StackLayout.Behaviors>
+                <behaviors:MarqueeBehavior PageWidth="{Binding Path=Width, Source={x:Reference mainPage}}" />
+            </StackLayout.Behaviors>
+
+            <Label Text="dffgdf dfg dfgdf gd df  df gdfg df f dfg ddf gdf dfgd gdf gdf df"
+                   TextColor="Beige"/>
+
+            <Label Text="dffgdf dfg dfgdf gd df  df gdfg df f dfg ddf gdf dfgd gdf gdf df"
+                   TextColor="Red"/>
+
+        </StackLayout>
+        
+    </ScrollView>
+
+    <!--<StackLayout
+            Padding="0"
+            BackgroundColor="Green"
+            Orientation="Horizontal"
+            Spacing="0">
+
+        <StackLayout.Behaviors>
+            <behaviors:MarqueeBehavior PageWidth="{Binding Path=Width, Source={x:Reference mainPage}}" />
+        </StackLayout.Behaviors>
+
+        <Label Text="dffgdf dfg dfgdf gd df  df gdfg df f dfg ddf gdf dfgd gdf gdf df"
+                   TextColor="Beige"/>
+
+        <Label Text="dffgdf dfg dfgdf gd df  df gdfg df f dfg ddf gdf dfgd gdf gdf df"
+                   TextColor="Red"/>
+
+    </StackLayout>-->
 
 </StackLayout>
