--- a/src/UI by Vedernykov/Views/MainView.xaml
+++ b/src/UI by Vedernykov/Views/MainView.xaml
@@ -4,7 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     Padding="25"
     BackgroundColor="{DynamicResource TextAndBackgroundColor_i14}"
-    x:Class="UI_by_Vedernykov.Views.Mobile.MainView">
+    x:Class="UI_by_Vedernykov.Views.MainView">
 
     <Label
         Text="Main view"
