create Charts and Graphs view

--- a/src/UI by Vedernykov/Views/MainPage.xaml
+++ b/src/UI by Vedernykov/Views/MainPage.xaml
@@ -45,6 +45,10 @@
                 <views:LoginFormView BindingContext="{Binding LoginFormViewViewModel}"/>
             </sc:StateCondition>
 
+            <sc:StateCondition State="{x:Static enums:EPages.ChartsAndGraphs}">
+                <views:ChartsAndGraphsView BindingContext="{Binding ChartsAndGraphsViewViewModel}"/>
+            </sc:StateCondition>
+
         </sc:StateContainer>
 
         <views:AboutAppView
