first micro work version

--- a/src/UI by Vedernykov/Views/MainPage.xaml
+++ b/src/UI by Vedernykov/Views/MainPage.xaml
@@ -49,6 +49,10 @@
                 <views:ChartsAndGraphsView BindingContext="{Binding ChartsAndGraphsViewViewModel}"/>
             </sc:StateCondition>
 
+            <sc:StateCondition State="{x:Static enums:EPages.FirebaseRealtimeDatabase}">
+                <views:FirebaseRealtimeDatabaseView BindingContext="{Binding FirebaseRealtimeDatabaseViewViewModel}"/>
+            </sc:StateCondition>
+
         </sc:StateContainer>
 
         <views:AboutAppView
